--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
       };
     </script>
 
-    <script async type="text/javascript" src="js/jquery.js"></script>
-    <script async type="text/javascript" src="js/ajaxchimp.js"></script>
+    <script defer type="text/javascript" src="js/jquery.js"></script>
+    <script defer type="text/javascript" src="js/ajaxchimp.js"></script>
 
     <script type="text/javascript" src="js/owl.carousel.min.js"></script>
     <script type="text/javascript" src="js/wow.js"></script>
     <script type="text/javascript" src="js/parallax.js"></script>
-    <script async type="text/javascript" src="js/nicescroll.js"></script>
+    <script defer type="text/javascript" src="js/nicescroll.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/scrollTo.js"></script>
   </head>
@@ -49,7 +49,7 @@
     <header>
       <div class="container">
         <div class="logo pull-left animated wow fadeInLeft">
-          <img class="logo-image" src="img/logo.png" alt="" title="" />
+          <img class="logo-image" src="img/logo.webp" alt="" title="" />
         </div>
 
         <nav class="pull-left">
@@ -152,7 +152,7 @@
         <div class="row">
           <div class="col-md-6 text-center animated wow fadeInLeft">
             <div class="iphone">
-              <img src="img/iphone.png" alt="" titl="" />
+              <img src="img/iphone.webp" alt="" titl="" />
             </div>
           </div>
           <div class="col-md-6 animated wow fadeInRight">
