--- a/index.html
+++ b/index.html
@@ -10,11 +10,6 @@
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0"
     />
 
-    <link rel="stylesheet" type="text/css" href="css/owl.transitions.css" />
-    <link rel="stylesheet" type="text/css" href="css/owl.carousel.css" />
-    <link rel="stylesheet" type="text/css" href="css/animate.css" />
-    <link rel="stylesheet" type="text/css" href="css/main.css" />
-
     <script>
       const loadStyleSheet = (src) => {
         if (document.createStyleSheet) {
@@ -31,18 +26,22 @@
       window.onload = function () {
         console.log("window done!");
         loadStyleSheet("./css/bootstrap.css");
+        loadStyleSheet("./css/main.css");
+        loadStyleSheet("./css/animate.css");
+        loadStyleSheet("./css/owl.carousel.css");
+        loadStyleSheet("./css/owl.transitions.css");
       };
     </script>
 
-    <script defer type="text/javascript" src="js/jquery.js"></script>
     <script defer type="text/javascript" src="js/ajaxchimp.js"></script>
 
-    <script type="text/javascript" src="js/owl.carousel.min.js"></script>
-    <script type="text/javascript" src="js/wow.js"></script>
-    <script type="text/javascript" src="js/parallax.js"></script>
+    <script type="text/javascript" src="js/owl.carousel.min.js" defer></script>
+    <script type="text/javascript" src="js/wow.js" defer></script>
+    <script type="text/javascript" src="js/parallax.js" defer></script>
     <script defer type="text/javascript" src="js/nicescroll.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
-    <script type="text/javascript" src="js/scrollTo.js"></script>
+    <script type="text/javascript" src="js/main.js" defer></script>
+    <script type="text/javascript" src="js/scrollTo.js" defer></script>
+    <script defer type="text/javascript" src="js/jquery.js"></script>
   </head>
   <body>
     <!--  Header Section -->
@@ -121,25 +120,25 @@
       <div class="container">
         <ul class="list-unstyled text-center clearfix">
           <li class="col-xs-6 col-sm-6 col-md-3 animated wow fadeInDown">
-            <img src="img/google_logo.png" alt="" title="" />
+            <img src="img/google_logo.png" alt="" title="" loading="lazy" />
           </li>
           <li
             class="col-xs-6 col-sm-6 col-md-3 animated wow fadeInDown"
             data-wow-delay=".2s"
           >
-            <img src="img/facebook_logo.png" alt="" title="" />
+            <img src="img/facebook_logo.png" alt="" title="" loading="lazy" />
           </li>
           <li
             class="col-xs-6 col-sm-6 col-md-3 animated wow fadeInDown"
             data-wow-delay=".3s"
           >
-            <img src="img/yahoo_logo.png" alt="" title="" />
+            <img src="img/yahoo_logo.png" alt="" title="" loading="lazy" />
           </li>
           <li
             class="col-xs-6 col-sm-6 col-md-3 animated wow fadeInDown"
             data-wow-delay=".4s"
           >
-            <img src="img/paypal_logo.png" alt="" title="" />
+            <img src="img/paypal_logo.png" alt="" title="" loading="lazy" />
           </li>
         </ul>
       </div>
@@ -210,7 +209,7 @@
             class="col-sm-4 col-md-4 details animated wow fadeInDown"
             data-wow-delay="0s"
           >
-            <img src="img/f_icon1.png" alt="" title="" />
+            <img src="img/f_icon1.png" alt="" title="" loading="lazy" />
             <h1 class="text-uppercase">malesuada fames turpis.</h1>
             <p class="text-lowercase">
               vel ultrices mauris libero id diam. Vivamus tellus sagittis
@@ -221,7 +220,7 @@
             class="col-sm-4 col-md-4 details animated wow fadeInDown"
             data-wow-delay=".1s"
           >
-            <img src="img/f_icon2.png" alt="" title="" />
+            <img src="img/f_icon2.png" alt="" title="" loading="lazy" />
             <h1 class="text-uppercase">malesuada fames turpis.</h1>
             <p class="text-lowercase">
               vel ultrices mauris libero id diam. Vivamus tellus sagittis
@@ -232,7 +231,7 @@
             class="col-sm-4 col-md-4 details animated wow fadeInDown"
             data-wow-delay=".2s"
           >
-            <img src="img/f_icon3.png" alt="" title="" />
+            <img src="img/f_icon3.png" alt="" title="" loading="lazy" />
             <h1 class="text-uppercase">malesuada fames turpis.</h1>
             <p class="text-lowercase">
               vel ultrices mauris libero id diam. Vivamus tellus sagittis
@@ -245,7 +244,7 @@
             class="col-sm-4 col-md-4 details animated wow fadeInDown"
             data-wow-delay="0s"
           >
-            <img src="img/f_icon4.png" alt="" title="" />
+            <img src="img/f_icon4.png" alt="" title="" loading="lazy" />
             <h1 class="text-uppercase">malesuada fames turpis.</h1>
             <p class="text-lowercase">
               vel ultrices mauris libero id diam. Vivamus tellus sagittis
@@ -256,7 +255,7 @@
             class="col-sm-4 col-md-4 details animated wow fadeInDown"
             data-wow-delay=".1s"
           >
-            <img src="img/f_icon5.png" alt="" title="" />
+            <img src="img/f_icon5.png" alt="" title="" loading="lazy" />
             <h1 class="text-uppercase">malesuada fames turpis.</h1>
             <p class="text-lowercase">
               vel ultrices mauris libero id diam. Vivamus tellus sagittis
@@ -267,7 +266,7 @@
             class="col-sm-4 col-md-4 details animated wow fadeInDown"
             data-wow-delay=".2s"
           >
-            <img src="img/f_icon6.png" alt="" title="" />
+            <img src="img/f_icon6.png" alt="" title="" loading="lazy" />
             <h1 class="text-uppercase">malesuada fames turpis.</h1>
             <p class="text-lowercase">
               vel ultrices mauris libero id diam. Vivamus tellus sagittis
@@ -370,13 +369,19 @@
     <footer>
       <ul class="list-unstyled list-inline app_platform">
         <li class="animated wow fadeInDown" data-wow-delay="0s">
-          <a href=""><img src="img/android_icon.png" alt="" title="" /></a>
+          <a href=""
+            ><img src="img/android_icon.png" alt="" title="" loading="lazy"
+          /></a>
         </li>
         <li class="animated wow fadeInDown" data-wow-delay=".1s">
-          <a href=""><img src="img/ios_icon.png" alt="" title="" /></a>
+          <a href=""
+            ><img src="img/ios_icon.png" alt="" title="" loading="lazy"
+          /></a>
         </li>
         <li class="animated wow fadeInDown" data-wow-delay=".2s">
-          <a href=""><img src="img/windows_icon.png" alt="" title="" /></a>
+          <a href=""
+            ><img src="img/windows_icon.png" alt="" title="" loading="lazy"
+          /></a>
         </li>
       </ul>
       <p class="copyright animated wow fadeIn" data-wow-duration="2s">
